erDiagram
    users {
        INT id PK
        ENUM role
        VARCHAR first_name
        VARCHAR middle_name
        VARCHAR suffix
        VARCHAR last_name
        VARCHAR email UK
        VARCHAR phone
        VARCHAR password_hash
        VARCHAR school_name
        ENUM school_type
        VARCHAR course
        TEXT address
        VARCHAR barangay
        VARCHAR town
        VARCHAR province
        ENUM status
        TIMESTAMP created_at
    }

    barangays {
        TINYINT id PK
        VARCHAR name UK
        VARCHAR town
        VARCHAR province
        TINYINT is_active
        TIMESTAMP created_at
    }

    announcements {
        INT id PK
        VARCHAR title
        TEXT content
        TINYINT is_active
        INT created_by FK
        TIMESTAMP created_at
    }

    requirement_templates {
        INT id PK
        VARCHAR requirement_name
        VARCHAR description
        ENUM applicant_type
        ENUM school_type
        TINYINT is_required
        TINYINT is_active
        INT sort_order
        TIMESTAMP created_at
    }

    application_periods {
        INT id PK
        VARCHAR academic_year
        ENUM semester
        VARCHAR period_name
        DATE start_date
        DATE end_date
        TINYINT is_open
        VARCHAR notes
        INT created_by FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    applications {
        INT id PK
        VARCHAR application_no UK
        INT user_id FK
        INT application_period_id FK
        VARCHAR qr_token UK
        ENUM applicant_type
        ENUM semester
        VARCHAR school_year
        VARCHAR school_name
        ENUM school_type
        VARCHAR course
        VARCHAR last_name
        VARCHAR first_name
        VARCHAR middle_name
        VARCHAR suffix
        TINYINT age
        ENUM civil_status
        ENUM sex
        DATE birth_date
        VARCHAR birth_place
        VARCHAR barangay
        VARCHAR town
        VARCHAR province
        TEXT address
        VARCHAR contact_number
        VARCHAR mother_name
        TINYINT mother_age
        VARCHAR mother_occupation
        DECIMAL mother_monthly_income
        VARCHAR father_name
        TINYINT father_age
        VARCHAR father_occupation
        DECIMAL father_monthly_income
        LONGTEXT siblings_json
        LONGTEXT educational_background_json
        LONGTEXT grants_availed_json
        VARCHAR photo_path
        ENUM status
        TEXT review_notes
        DATETIME interview_date
        VARCHAR interview_location
        DATE soa_submission_deadline
        DATETIME soa_submitted_at
        DATETIME submitted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    application_documents {
        INT id PK
        INT application_id FK
        INT requirement_template_id FK
        VARCHAR requirement_name
        VARCHAR document_type
        VARCHAR file_path
        VARCHAR file_ext
        ENUM verification_status
        VARCHAR remarks
        TIMESTAMP uploaded_at
    }

    disbursements {
        INT id PK
        INT application_id FK
        DECIMAL amount
        DATE disbursement_date
        TIME disbursement_time
        VARCHAR reference_no
        VARCHAR payout_location
        ENUM status
        VARCHAR qr_token
        TEXT remarks
        TIMESTAMP created_at
    }

    sms_logs {
        INT id PK
        INT user_id FK
        VARCHAR phone
        TEXT message
        ENUM sms_type
        TEXT provider_response
        ENUM delivery_status
        TIMESTAMP created_at
    }

    sms_templates {
        INT id PK
        VARCHAR template_name UK
        VARCHAR template_body
        VARCHAR template_category
        TINYINT is_active
        INT created_by FK
        INT updated_by FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    audit_logs {
        INT id PK
        INT user_id FK
        VARCHAR user_role
        VARCHAR action
        VARCHAR entity_type
        VARCHAR entity_id
        VARCHAR description
        LONGTEXT metadata_json
        VARCHAR ip_address
        VARCHAR user_agent
        TIMESTAMP created_at
    }

    notifications {
        INT id PK
        INT user_id FK
        VARCHAR title
        TEXT message
        VARCHAR notification_type
        VARCHAR related_url
        TINYINT is_read
        DATETIME read_at
        INT created_by FK
        TIMESTAMP created_at
    }

    otp_codes {
        INT id PK
        INT user_id FK
        VARCHAR code_hash
        DATETIME expires_at
        TINYINT is_used
        TIMESTAMP created_at
    }

    application_wizard_drafts {
        INT id PK
        INT user_id FK,UK
        LONGTEXT wizard_json
        TINYINT current_step
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    users ||--o{ announcements : "creates"
    users ||--o{ application_periods : "creates"
    users ||--o{ applications : "submits"
    application_periods ||--o{ applications : "groups"
    applications ||--o{ application_documents : "has"
    requirement_templates ||--o{ application_documents : "template_for"
    applications ||--o{ disbursements : "payouts"
    users ||--o{ sms_logs : "sms_recipient"
    users ||--o{ sms_templates : "created_templates"
    users ||--o{ sms_templates : "updated_templates"
    users ||--o{ audit_logs : "actor"
    users ||--o{ notifications : "recipient"
    users ||--o{ notifications : "sender"
    users ||--o{ otp_codes : "otp_owner"
    users ||--|| application_wizard_drafts : "draft_owner"
